--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
+          <a class="fa fa-github" href="https://github.com/nanne"></a>
         </div>
 
         {{ content }}
