--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,9 @@
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
+          <a href="https://github.com/kadarakos">
+            <img src="assets/github-logo-icon-16155.png" alt="github" style="width:42px;height:42px;border:0">
+          </a>
         </div>
 
         {{ content }}
