--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <a href="https://github.com/kadarakos">
-            <img src="assets/github.svg" alt="github" style="width:42px;height:42px;border:0">
+            <img src="assets/github-logo-face.svg" alt="github" style="width:42px;height:42px;border:0">
           </a>
         </div>
 
