--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,11 @@
           <a href="https://github.com/kadarakos">
             <img src="assets/github-logo-face.svg" alt="github" style="width:42px;height:42px;border:0">
           </a>
+          
+          <a href="https://github.com/kadarakos">
+            <img src="assets/twitter.svg" alt="twitter" style="width:42px;height:42px;border:0">
+          </a>
+          
         </div>
 
         {{ content }}
