--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,12 @@
             <img src="assets/github-logo-face.svg" alt="github" style="width:42px;height:42px;border:0">
           </a>
           
+          <div class="divider"/>
+
           <a href="https://github.com/kadarakos">
             <img src="assets/twitter.svg" alt="twitter" style="width:42px;height:42px;border:0">
           </a>
-          
+
         </div>
 
         {{ content }}
