--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,10 @@
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
-          <a href="https://github.com/kadarakos">
+          <a href="https://github.com/kadarakos" style="margin-right: 16px"> 
             <img src="assets/github-logo-face.svg" alt="github" style="width:42px;height:42px;border:0">
           </a>
           
-          <div class="divider"/>
-
           <a href="https://github.com/kadarakos">
             <img src="assets/twitter.svg" alt="twitter" style="width:42px;height:42px;border:0">
           </a>
