--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,12 @@
             <img src="assets/github-logo-face.svg" alt="github" style="width:42px;height:42px;border:0">
           </a>
           
-          <a href="https://github.com/kadarakos">
+          <a href="https://twitter.com/kadarakoss"  style="margin-right: 16px">
             <img src="assets/twitter.svg" alt="twitter" style="width:42px;height:42px;border:0">
+          </a>
+          
+          <a href="https://twitter.com/kadarakoss"  style="margin-right: 16px">
+            <img src="assets/linkedin.svg" alt="twitter" style="width:42px;height:42px;border:0">
           </a>
 
         </div>
