--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,13 @@
           <a href="https://twitter.com/kadarakoss"  style="margin-right: 16px">
             <img src="assets/linkedin.svg" alt="twitter" style="width:32px;height:32px;border:0">
           </a>
+            
+            
+           <a  href="mailto:akadar@uvt.nlSubject=Hello" >
+            <img src="assets/mail-send.svg" alt="twitter" style="width:32px;height:32px;border:0">
+          </a>
+            
+            
           </p>
         </div>
 
