--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,11 +30,11 @@
             <img src="assets/github-logo-face.svg" alt="github" style="width:32px;height:32px;border:0">
           </a>
           
-          <a href="https://twitter.com/kadarakoss"  style="margin-right: 16px">
+          <a href="https://twitter.com/kadarakos"  style="margin-right: 16px">
             <img src="assets/twitter.svg" alt="twitter" style="width:32px;height:32px;border:0">
           </a>
           
-          <a href="https://twitter.com/kadarakoss"  style="margin-right: 16px">
+          <a href="https://www.linkedin.com/in/%C3%A1kos-k%C3%A1d%C3%A1r-a5363172/"  style="margin-right: 16px">
             <img src="assets/linkedin.svg" alt="twitter" style="width:32px;height:32px;border:0">
           </a>
             
