--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,14 +26,15 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <p>
-          <a href="https://github.com/kadarakos" style="margin-right: 16px"> 
-            <img src="assets/github-logo-face.svg" alt="github" style="width:32px;height:32px;border:0">
-          </a>
-          
-          <a href="https://twitter.com/kadarakos"  style="margin-right: 16px">
-            <img src="assets/twitter.svg" alt="twitter" style="width:32px;height:32px;border:0">
-          </a>
-          
+            
+            <a href="https://github.com/kadarakos" id="ico" style="margin-right: 16px"> 
+              <img src="assets/github-logo-face.svg" alt="github" style="width:32px;height:32px;border:0">
+            </a>
+
+            <a href="https://twitter.com/kadarakos"  style="margin-right: 16px">
+              <img src="assets/twitter.svg" alt="twitter" style="width:32px;height:32px;border:0">
+            </a>
+
           <a href="https://www.linkedin.com/in/%C3%A1kos-k%C3%A1d%C3%A1r-a5363172/"  style="margin-right: 16px">
             <img src="assets/linkedin.svg" alt="twitter" style="width:32px;height:32px;border:0">
           </a>
@@ -42,8 +43,7 @@
            <a  href="mailto:akadar@uvt.nlSubject=Hello" >
             <img src="assets/mail-send.svg" alt="twitter" style="width:32px;height:32px;border:0">
           </a>
-            
-            
+              
           </p>
         </div>
 
