--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <p>
             
-            <a href="https://github.com/kadarakos" id="ico" style="margin-right: 16px"> 
+            <a href="https://github.com/kadarakos" style="margin-right: 16px"> 
               <img src="assets/github-logo-face.svg" alt="github" style="width:32px;height:32px;border:0">
             </a>
 
