--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,9 @@
           <p>
             
             <a href="https://github.com/kadarakos" style="margin-right: 16px"> 
-              <img src="assets/github-logo-face.svg" alt="github" id="git-ico" style="width:32px;height:32px;border:0">
+              <div class="git-ico">
+                <img src="assets/github-logo-face.svg" alt="github" style="width:32px;height:32px;border:0">
+              </div>
             </a>
 
             <a href="https://twitter.com/kadarakos"  style="margin-right: 16px">
