--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,11 +15,11 @@ a:hover {
     color: hotpink;
 }
 
-#git-ico {
+img {
     transition: width 2s, height 4s;
 }
 
-#git-ico:hover {
+img:hover {
     width: 300px;
     height: 300px;
 }
