--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,11 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <p>
-            
+            <div class="ico">
             <a href="https://github.com/kadarakos" style="margin-right: 16px"> 
-                <img src="assets/github-logo-face.svg" alt="github" style="width:32px;height:32px;border:0">
+                <img src="assets/github-logo-face.svg" alt="github">
             </a>
+            </div>  
 
             <a href="https://twitter.com/kadarakos"  style="margin-right: 16px">
               <img src="assets/twitter.svg" alt="twitter" style="width:32px;height:32px;border:0">
