--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,12 +15,17 @@ a:hover {
     color: hotpink;
 }
 
-img {
-    transition: width 2s, height 4s;
+.ico img {
+    width: 32px;
+    height: 32px;
+    border: 0;
     -webkit-transition: width 2s, height 4s;
+    transition: width 2s, height 4s;
 }
 
-img {
+.ico img {
     width: 300px;
     height: 300px;
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
 }
