--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,8 +19,8 @@ a:hover {
     width: 32px;
     height: 32px;
     border: 0;
-    -webkit-transition: width 2s, height 4s;
-    transition: width 2s, height 4s;
+    -webkit-transition: width 2s, height 4s; -webkit-transform: 1s;
+    transition: width 2s, height 4s;  transform: 1s; 
 }
 
 .ico img:hover {
