--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,7 @@ a:hover {
     color: hotpink;
 }
 
-.ico img {
+a img {
     width: 32px;
     height: 32px;
     border: 0;
@@ -23,7 +23,7 @@ a:hover {
     transition: width 0.5s, height 0.5s;  transform: 2s; 
 }
 
-.ico img:hover {
+a img:hover {
     width: 40px;
     height: 40px;
     -webkit-transform: rotate(350deg);
