--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,13 +19,11 @@ a img {
     width: 32px;
     height: 32px;
     border: 0;
-    -webkit-transition: width 0.5s, height 0.5s; -webkit-transform: 2s;
-    transition: width 0.5s, height 0.5s;  transform: 2s; 
+    -webkit-transition: -webkit-transform: 2s;
+    transition: transform: 2s; 
 }
 
 a img:hover {
-    width: 40px;
-    height: 40px;
     -webkit-transform: rotate(350deg);
     transform: rotate(350deg);
 }
