--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,16 +32,16 @@
             </a>
 
             <a href="https://twitter.com/kadarakos"  style="margin-right: 16px">
-              <img src="assets/twitter.svg" alt="twitter" style="width:32px;height:32px;border:0">
+              <img src="assets/twitter.svg" alt="twitter">
             </a>
 
           <a href="https://www.linkedin.com/in/%C3%A1kos-k%C3%A1d%C3%A1r-a5363172/"  style="margin-right: 16px">
-            <img src="assets/linkedin.svg" alt="twitter" style="width:32px;height:32px;border:0">
+            <img src="assets/linkedin.svg" alt="twitter">
           </a>
             
             
            <a  href="mailto:akadar@uvt.nlSubject=Hello" >
-            <img src="assets/mail-send.svg" alt="twitter" style="width:32px;height:32px;border:0">
+            <img src="assets/mail-send.svg" alt="twitter">
           </a>
               
           </p>
