--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,3 +34,31 @@ a img:hover {
     -webkit-transform: rotate(350deg);
     transform: rotate(350deg);
 }
+
+
+/* CSS3 typwriter madness */
+/* Google Fonts */
+.title h1{
+  font-family: "Courier";
+  white-space: nowrap;
+  overflow: hidden;
+  animation: type 4s steps(60, end); 
+}
+
+span{
+  animation: blink 1s infinite;
+}
+
+@keyframes type{ 
+  from { width: 0; } 
+} 
+
+@keyframes type2{
+  0%{width: 0;}
+  50%{width: 0;}
+  100%{ width: 100; } 
+} 
+
+@keyframes blink{
+  to{opacity: .0;}
+}
