--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,7 @@ a img:hover {
 
 /* CSS3 typwriter madness */
 /* Google Fonts */
-.title h1{
+#title h1{
   font-family: "Courier";
   white-space: nowrap;
   overflow: hidden;
