--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
 
       <section>
         <div id="title">
+          <div class="typewriter">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          </div>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <p>
 
