--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,8 +56,8 @@ body {
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
+    typing 3.5s steps(9, end),
+    blink-caret .75s step-end;
 }
 
 /* The typing effect */
