--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,7 @@ a img:hover {
 
 /* CSS3 typwriter madness */
 
-/* GLOBAL STYLES */
+/* GLOBAL STYLES 
 body {
   background: #333;
   color: #fff;
@@ -47,11 +47,11 @@ body {
   display: flex;
   justify-content: center;
 }
-
+*/
 /* DEMO-SPECIFIC STYLES */
 .typewriter h1 {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
+   /* border-right: .15em solid orange; The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
@@ -63,7 +63,7 @@ body {
 /* The typing effect */
 @keyframes typing {
   from { width: 0 }
-  to { width: 50% }
+  to { width: 100% }
 }
 
 /* The typewriter cursor effect */
