--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,7 +56,7 @@ body {
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 3.5s steps(40, end),
+    typing1 3.5s steps(40, end),
 }
 
 .typewriter p {
@@ -66,11 +66,16 @@ body {
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 3.5s steps(40, end),
+    typing2 3.5s steps(40, end),
 }
 
 /* The typing effect */
-@keyframes typing {
+@keyframes typing1 {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes typing2 {
   from { width: 0 }
   to { width: 100% }
 }
