--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,26 +56,12 @@ body {
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing1 3.5s steps(40, end),
-}
-
-.typewriter p {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-   /* border-right: .15em solid orange; The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing2 7s steps(40, end),
+    typing 3.5s steps(40, end),
 }
 
 /* The typing effect */
-@keyframes typing1 {
+@keyframes typing {
   from { width: 0 }
   to { width: 100% }
 }
 
-@keyframes typing2 {
-  from { width: 0 }
-  to { width: 100% }
-}
