--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,11 +2,13 @@
 ---
 
 @import "{{ site.theme }}";
-@import url(https://fonts.googleapis.com/css?family=Roboto+Mono:400);
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 
 p {
     font-size: 16px;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Raleway', sans-serif;
+
+
 }
 
 /*  Link colors   */ 
