--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,8 +7,11 @@
 p {
     font-size: 18px;
     font-family: 'Raleway', sans-serif;
+}
 
-
+intro {
+    font-size: 28px;
+    font-family: 'Raleway', sans-serif;
 }
 
 /*  Link colors   */ 
