--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@ p {
     font-family: 'Raleway', sans-serif;
 }
 
-intro {
+div.intro {
     font-size: 28px;
     font-family: 'Raleway', sans-serif;
 }
