--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,11 +2,13 @@
 ---
 
 @import "{{ site.theme }}";
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Arimo');
 
 p {
     font-size: 18px;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Arimo', sans-serif;
+
+
 }
 
 div.intro {
