--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,11 +2,12 @@
 ---
 
 @import "{{ site.theme }}";
-@import url('https://fonts.googleapis.com/css?family=Arimo');
+@import url('https://fonts.googleapis.com/css?family=Cabin');
 
 p {
     font-size: 18px;
-    font-family: 'Arimo', sans-serif;
+    font-family: 'Cabin', sans-serif;
+
 
 
 }
