--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
           </a>
             
             
-           <a  href="mailto:a.kadar@uvt.nlSubject=Hello" >
+           <a  href="mailto:akos.kadar@samsung.com" >
             <img src="assets/mail-send.svg" alt="twitter">
           </a>
               
